--- a/pool_manager/templates/pool_manager/poollease.html
+++ b/pool_manager/templates/pool_manager/poollease.html
@@ -24,6 +24,10 @@
               <th scope="row">Range Number</th>
               <td>{{ object.range_number }}</td>
             </tr>
+            <tr>
+              <th scope="row">Tag</th>
+              <td>{{ object.tag }}</td>
+            </tr>
           </table>
         </div>
       </div>
